--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": " node src/app.js"
+    "start": " node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs,css"
   },
-  "author": "",
+  "author": "Tim Hart",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.0.1",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
